--- a/kitty-test.html
+++ b/kitty-test.html
@@ -85,7 +85,18 @@
 
 			table[id="main_body"] {
 				width: 85% !important;
-				border: 1px solid #e9e9e9;
+				border-right: 1px solid #e9e9e9;
+				border-left: 1px solid #e9e9e9;
+			}
+
+			table[class="footer_body"] {
+				width: 85% !important;
+				border-right: 1px solid #e9e9e9;
+				border-left: 1px solid #e9e9e9;
+				padding: 0;
+				margin: auto;
+				box-sizing: border-box;
+				border-spacing: 0 !important;
 			}
 
 			table[id="body_content"] {
@@ -174,12 +185,32 @@
 			td[class="D_module_subm3_text"],
 			td[class="D_module_subm4_text"] {
 				height: auto !important;
-				padding: 26px 17px 0 17px !important;
+				padding: 26px 20px 0 20px !important;
+			}
+
+			table[class="footer_body"] td[class="D_module_subm1_text"] {
+				padding-top: 14px !important;
 			}
 
 			[class="mhide"],
 			img[class="mhide"] {
 				display: none !important;
+			}
+
+			td[class="mheight"] {
+				height: auto !important;
+			}
+
+			span[class="mwrap"] {
+				display: block;
+				margin-top: 10px;
+				padding-top: 15px;
+				border-top: 1px solid #e9e9e9;
+			}
+
+			img[class="mpawprint"] {
+				/* width: 1.0em;
+				height: 1.0em; */
 			}
 
 			font[class="fontResize"] {
@@ -204,6 +235,18 @@
 
 			[class="mcenter"] table {
 				margin: 0 auto !important;
+			}
+
+			td[class="mheadline"] {
+				height: 15px !important;
+			}
+
+			td[class="mherotext"] {
+				height: 15px !important;
+			}
+
+			[class="mmargin"] {
+				margin-bottom: 30	px !important;
 			}
 
 			[class="nowrap"] {
@@ -231,20 +274,27 @@
 				<table width="614" align="center" id="main_body" align="center" border="0" cellspacing="0" cellpadding="0">
 					<tr>
 						<td>
-							<!-- Preview text that will be seen in the inbox. Not visible in the the email client. -->
+								<!-- Preview text that will be seen in the inbox. Not visible in the the email client. -->
 							<font style="font-family:Helvetica, Arial, sans-serif;color:#ffffff;font-size:1px;">Check out the Cat Collection, Download the Cat App! You have found a place to curl up and call home.</font>
 							<table width="100%" bgcolor="#fafafa" border="0" cellspacing="0" cellpadding="0">
 								<tr>
+									<td height="25" class="mheadline">
+										<!-- top margin -->
+									</td>
+								</tr>	
+								<tr>
 									<td align="center">
-										<h1 style="padding-bottom:0;margin-bottom:15px; color: #1c1c1c;font-size: 27px;">
+										<h1 style="padding-bottom:0;margin-bottom:15px; color: #1c1c1c;font-size: 28px;">
 											<font face="Arial, sans-serif" color="#1c1c1c" style="font-weight: normal;">
 												Headline 1
 											</font>
 										</h1>
 									</td>
 								</tr>
-								<tr class="mhide">
-									<td height="35"></td>
+								<tr>
+									<td height="50" class="mherotext">
+										<!-- bottom margin -->
+									</td>
 								</tr>
 								<tr>
 									<td background="http://portfolio.davechurilla.com/images/traction/kitty.jpg" bgcolor="#fafafa"
@@ -339,7 +389,7 @@
 																		<td align="center" valign="top" class="D_module_subm1_text">
 																			<table width="100%" border="0" cellspacing="0" cellpadding="0">
 																				<tr>
-																					<td valign="top" align="center" height="175">
+																					<td valign="top" align="center" height="175" class="mheight">
 																						<div>
 																							<h1
 																								style="padding-bottom:0;margin-bottom:15px;color: #1c1c1c;font-size: 20px;">
@@ -420,7 +470,7 @@
 																		<td align="center" valign="top" class="D_module_subm2_text">
 																			<table width="100%" border="0" cellspacing="0" cellpadding="0">
 																				<tr>
-																					<td valign="top" align="center" height="175">
+																					<td valign="top" align="center" height="175" class="mheight">
 																						<div>
 																							<h1
 																								style="padding-bottom:0;margin-bottom:15px;color: #1c1c1c;font-size: 20px;">
@@ -471,7 +521,7 @@
 													<!-- End: Submodule 2 -->
 												</td>
 											</tr>
-											<tr class="mhide">
+											<tr>
 												<td height="20">
 													<!-- margin bottom -->
 												</td>
@@ -479,7 +529,6 @@
 										</table>
 									</td>
 								</tr>
-					</tr>
 					<tr class="mhide">
 						<td height="35">
 							<!-- margin bottom -->
@@ -518,6 +567,7 @@
 														<font face="Arial, sans-serif" color="#1c1c1c" style="font-weight: normal;">
 															Headline 2 <br />
 															with More Words
+                                                        </font>
 													</h1>
 													<!-- Begin: Submodule 1 -->
 													<table class="D_module_subm1" align="left" width="300" border="0" cellspacing="0"
@@ -541,6 +591,7 @@
 																							<table border="0" cellspacing="0" cellpadding="0">
 																								<tr>
 																									<td><img
+																											class="mpawprint"
 																											src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
 																											alt="Paws for a brief momement..." width="31" height="32">
 																									</td>
@@ -610,7 +661,8 @@
 																							<table border="0" cellspacing="0" cellpadding="0">
 																								<tr>
 																									<td><img
-																											src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
+																										class="mpawprint"	
+																										src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
 																											alt="Paws for a brief momement..." width="31" height="32">
 																									</td>
 																									<td width="10"></td>
@@ -681,7 +733,8 @@
 																							<table border="0" cellspacing="0" cellpadding="0">
 																								<tr>
 																									<td><img
-																											src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
+																										class="mpawprint"	
+																										src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
 																											alt="Paws for a brief momement..." width="31" height="32">
 																									</td>
 																									<td width="10"></td>
@@ -750,7 +803,8 @@
 																							<table border="0" cellspacing="0" cellpadding="0">
 																								<tr>
 																									<td><img
-																											src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
+																										class="mpawprint"	
+																										src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
 																											alt="Paws for a brief momement..." width="31" height="32">
 																									</td>
 																									<td width="10"></td>
@@ -797,27 +851,26 @@
 													<!-- End: Submodule 4 -->
 												</td>
 											</tr>
-											<tr class="mhide">
-												<td height="20">
+											<tr>
+												<td height="30">
 													<!-- margin bottom -->
 												</td>
 											</tr>
 										</table>
 									</td>
 								</tr>
-					</tr>
 				</table>
 			</td>
 		</tr>
 	</table>
 	<!-- module divider -->
-	<hr class="divider" style="border: 1px solid #e9e9e9;" />
+	<hr class="divider" style=" border: none; background-color: #e9e9e9; height: 1px;" />
 
 	<!-- Small aside module for cat apps CTA -->
 	<table class="D_module" border="0" cellspacing="0" cellpadding="0" align="center">
-		<tr">
-			<td height="25">
-				<!-- margin top -->
+		<tr>
+			<td height="30">
+				<!-- padding top -->
 			</td>
 			</tr>
 			<tr>
@@ -835,17 +888,17 @@
 				</td>
 			</tr>
 			<tr>
-				<td height="25">
-					<!-- margin bottom -->
+				<td height="30">
+					<!-- padding bottom -->
 				</td>
 			</tr>
 	</table>
 
 	<!-- module divider -->
-	<hr class="divider" style="border: 1px solid #e9e9e9;" />
+	<hr class="divider" style=" border: none; background-color: #e9e9e9; height: 1px;" />
 
 	<!-- Containing table for third module -->
-	<table border="0" cellspacing="0" cellpadding="0">
+	<table border="0" cellspacing="0" cellpadding="0" class="mmargin">
 		<tr>
 			<td>
 
@@ -873,6 +926,7 @@
 										<h1 style="padding-bottom:0;margin-bottom:25px; color: #1c1c1c;font-size: 27px;">
 											<font face="Arial, sans-serif" color="#1c1c1c" style="font-weight: normal;">
 												Headline 3
+                                            </font>
 										</h1>
 										<!-- Begin: Submodule 1 -->
 										<table class="D_module_subm1" align="left" width="210" border="0" cellspacing="0" cellpadding="0"
@@ -900,7 +954,8 @@
 																<table width="100%" border="0" cellspacing="0" cellpadding="0">
 																	<tr>
 																		<td align="center"><img
-																				src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
+																			class="mpawprint"	
+																			src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
 																				alt="Paws for a brief momement..." width="64" height="66"></td>
 																	</tr>
 																	<tr>
@@ -909,6 +964,7 @@
 																				<h1 style="padding-bottom:0;margin-bottom:15px;color: #1c1c1c;font-size: 20px;">
 																					<font face="Arial, sans-serif" color="#1c1c1c" style="font-weight: normal;">
 																						Title 1
+                                                                                    </font>
 																				</h1>
 																				<p
 																					style="line-height:20px;margin-top:0;padding-top:0;color: #1c1c1c;font-size: 12px;line-height: 20px;">
@@ -972,7 +1028,8 @@
 																<table width="100%" border="0" cellspacing="0" cellpadding="0">
 																	<tr>
 																		<td align="center"><img
-																				src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
+																			class="mpawprint"	
+																			src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
 																				alt="Paws for a brief momement..." width="64" height="66"></td>
 																	</tr>
 																	<tr>
@@ -981,6 +1038,7 @@
 																				<h1 style="padding-bottom:0;margin-bottom:15px;color: #1c1c1c;font-size: 20px;">
 																					<font face="Arial, sans-serif" color="#1c1c1c" style="font-weight: normal;">
 																						Title 2
+                                                                                    </font>
 																				</h1>
 																				<p
 																					style="line-height:20px;margin-top:0;padding-top:0;color: #1c1c1c;font-size: 12px;line-height: 20px;">
@@ -990,7 +1048,7 @@
 																						Or I'm bored inside, let me out I'm lonely outside, let me in I can't
 																						make up my mind whether to go
 																						<br />
-																						<a href="#" style="text-decoration: none; color: #006fc1;line-height: 25px;"">Find more info ></a>
+																						<a href="#" style="text-decoration: none; color: #006fc1;line-height: 25px;">Find more info ></a>
 																													</font>
 																												</p>
 																										</div>
@@ -1036,7 +1094,8 @@
 																			<table width="100%" border="0" cellspacing="0" cellpadding="0">
 																				<tr>
 																					<td align="center"><img
-																							src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
+																						class="mpawprint"	
+																						src="http://portfolio.davechurilla.com/images/traction/pawprint.png"
 																							alt="Paws for a brief momement..." width="64" height="66"></td>
 																				</tr>
 																				<tr>
@@ -1047,6 +1106,7 @@
 																								<font face="Arial, sans-serif" color="#1c1c1c"
 																									style="font-weight: normal;">
 																									Title 3
+                                                                                                </font>
 																							</h2>
 																							<p
 																								style="line-height:20px;margin-top:0;padding-top:0;color: #1c1c1c;font-size: 12px;line-height: 20px;">
@@ -1083,12 +1143,18 @@
 							</table>
 						</td>
 					</tr>
-				</table>
+					<tr>
+						<td>
+
 				<!-- End: Third module -->
 			</td>
 		</tr>
 	</table>
 	<!-- End: Third module containing table -->
+
+</td>
+</tr>
+</table>
 	</td>
 	<td width="42" class="mhide">
 		<!-- margin right -->
@@ -1097,7 +1163,101 @@
 		<!-- margin border -->
 	</td>
 	<!-- bottom closing border -->
+	</tr>
+
+
 	<tr>
+		<td class="mhide" bgcolor="#f2f2f2"></td>
+		<td class="mhide" bgcolor="#f2f2f2"></td>
+		<td>	<!-- Begin: Footer Module -->
+			<table class="footer_body" bgcolor="#f2f2f2" width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tr>
+					<td>
+			<table class="D_module" width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tr height="25" class="mhide">
+					<td>
+						<!-- margin bottom -->
+					</td>
+				</tr>
+				<tr height="15">
+					<td class="D_module_subm1_text" align="center">
+						<!-- footer nav -->
+						<p
+						style="line-height:20px;margin-top:0;padding-top:0;color: #a0a0a0;font-size: 12px;line-height: 14px;">
+						<font
+							face="Lucida Sans, Trebuchet MS, Lucida Sans, Lucida Grande, Arial, sans-serif"
+							color="#a0a0a0" style="font-weight: normal;">
+						<a href="#" style="color:#959595; text-decoration: none;">Link 1</a> | <a href="#" style="color:#959595; text-decoration: none;">Link 2</a> | <a href="#" style="color:#959595; text-decoration: none;">1-800-MY-CATSS</a> <span class="mhide">|</span> <span class="mwrap"><a href="#" style="color:#959595; text-decoration: none;">Link 3</a></span>
+						</font>
+						</p>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<!-- module divider -->
+						<hr class="divider" style=" border: none; background-color: #e9e9e9; height: 1px;" />
+					</td>
+				</tr>
+				<tr height="15" class="mhide">
+					<td>
+						<!-- margin bottom -->
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<tr>
+							<td class="D_module_subm1_text">
+								<!-- footer content -->
+								<p
+								style="line-height:20px;margin-top:0;padding-top:0;color: #a0a0a0;font-size: 9px;line-height: 14px;">
+								<font
+									face="Lucida Sans, Trebuchet MS, Lucida Sans, Lucida Grande, Arial, sans-serif"
+									color="#a0a0a0" style="font-weight: normal;">
+									Some features may not be available for all countries or areas. <a href="#" style="color:#959595; text-decoration: none;">Click here</a> to see complete list.
+								</font>
+								</p>
+
+								<p
+								style="line-height:20px;margin-top:0;padding-top:0;color: #a0a0a0;font-size: 9px;line-height: 14px;">
+								<font
+									face="Lucida Sans, Trebuchet MS, Lucida Sans, Lucida Grande, Arial, sans-serif"
+									color="#a0a0a0" style="font-weight: normal;">TM and &copy; 2016 Company Inc. 123 Main Street, San Francisco, CA 94109.
+								</font>
+								</p>
+
+								<p
+								style="line-height:20px;margin-top:0;padding-top:0;color: #a0a0a0;font-size: 9px;line-height: 14px;">
+								<font
+									face="Lucida Sans, Trebuchet MS, Lucida Sans, Lucida Grande, Arial, sans-serif"
+									color="#a0a0a0" style="font-weight: normal;"><a href="#" style="color:#959595; text-decoration: none;">All Rights Reserved</a> | <a href="#" style="color:#959595; text-decoration: none;">Privacy Policy</a> | <a href="#" style="color:#959595; text-decoration: none;">My Cat ID</a>
+								</font>
+							</p>
+
+								<p
+								style="line-height:20px;margin-top:0;padding-top:0;color: #a0a0a0;font-size: 9px;line-height: 14px;">
+								<font
+									face="Lucida Sans, Trebuchet MS, Lucida Sans, Lucida Grande, Arial, sans-serif"
+									color="#a0a0a0" style="font-weight: normal;">If you prefer not to receive commercial email from us, or if you've changed your email address, please <a 	href="#" style="color:#959595; text-decoration: none;">click here</a>.
+								</font>
+								</p>
+							</td>
+						</tr>
+					</td>
+				</tr>
+				<tr height="25">
+					<td>
+						<!-- margin bottom -->
+					</td>
+				</tr>
+			</table>
+			<!-- End: Footer Module -->
+		</td>
+		</tr>
+		</table>
+	</td>
+		<td class="mhide" bgcolor="#f2f2f2"></td>
+		<td class="mhide" bgcolor="#f2f2f2"></td>
+	</tr>
 	<tr height="1" bgcolor="#e9e9e9" class="mhide">
 		<td></td>
 		<td></td>
@@ -1107,7 +1267,7 @@
 	</tr>
 	<tr>
 		<!-- bottom margin -->
-	<tr height="15" class="mhide">
+	<tr height="25" class="mhide">
 		<td></td>
 		<td></td>
 		<td></td>
@@ -1115,7 +1275,5 @@
 		<td></td>
 	</tr>
 	</table>
-
 </body>
-
 </html>
