code optimization/validation edits, and fix for wrapping issue of submodule in module 3 when viewed in Outlook

--- a/kitty-test.html
+++ b/kitty-test.html
@@ -897,7 +897,7 @@
 							<!-- Containing table for third module -->
 							<table border="0" cellspacing="0" cellpadding="0" class="mmargin">
 								<tr>
-									<td>
+									<td align="center">
 
 										<!-- Begin: Third module submodules
 							Desktop: 3 text modules with icons in one row with images and subheadlines above text  modules.
@@ -909,9 +909,9 @@
 												</td>
 											</tr>
 											<tr>
-												<td width="19" class="mhide">
-													<!-- left margin -->
-												</td>
+												<!-- <td width="16" class="mhide"> -->
+												<!-- left margin -->
+												<!-- </td> -->
 												<td valign="top" class="element_stack">
 													<!-- table container for submodule 1, 2 & 3 -->
 													<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
@@ -924,7 +924,8 @@
 																</h1>
 																<!-- Begin: Submodule 1 -->
 																<table class="D_module_subm1" align="left" width="210" border="0" cellspacing="0"
-																	cellpadding="0" style="margin:0 !important; padding: 0 !important;">
+																	cellpadding="0"
+																	style="margin:0 !important; padding: 0 !important; float:left !important;">
 																	<tr>
 																		<td valign="top">
 																			<table class="D_module_subm1_text_wrapper" width="100%" border="0" cellspacing="0"
@@ -1000,7 +1001,8 @@
 																<!-- Begin: Submodule 2 -->
 
 																<table class="D_module_subm2" align="left" width="190" border="0" cellspacing="0"
-																	cellpadding="0" style="margin:0 !important; padding: 0 !important;">
+																	cellpadding="0"
+																	style="margin:0 !important; padding: 0 !important; float:left !important;">
 																	<tr>
 																		<td valign="top">
 																			<table class="D_module_subm2_text_wrapper" align="left" width="100%" border="0"
@@ -1058,7 +1060,7 @@
 																							</tr>
 																						</table>
 																					</td>
-																					<td width=" 17" class="mhide">
+																					<td width="17" class="mhide">
 																						<!-- margin left -->
 																					</td>
 																				</tr>
@@ -1070,7 +1072,8 @@
 
 																<!-- Begin: Submodule 3 -->
 																<table class="D_module_subm3" align="left" width="180" border="0" cellspacing="0"
-																	cellpadding="0" style="margin:0 !important; padding: 0 !important;">
+																	cellpadding="0"
+																	style="margin:0 !important; padding: 0 !important; float:left !important;">
 																	<tr>
 																		<td valign="top">
 																			<table class="D_module_subm3_text_wrapper" align="left" width="100%" border="0"
@@ -1136,6 +1139,7 @@
 																		</td>
 																	</tr>
 																</table>
+																<div style="clear: left;"></div>
 																<!-- End: Submodule 3 -->
 															</td>
 														</tr>
@@ -1149,6 +1153,11 @@
 							</table>
 							<!-- End: Third module containing table -->
 
+						</td>
+					</tr>
+					<tr>
+						<td height="30">
+							<!-- bottom margin - wht space above footer -->
 						</td>
 					</tr>
 				</table>
@@ -1247,7 +1256,7 @@
 									</td>
 								</tr>
 							</table>
-						<!-- End: Footer Module -->
+							<!-- End: Footer Module -->
 						</td>
 					</tr>
 				</table>
@@ -1273,4 +1282,5 @@
 		</tr>
 	</table>
 </body>
+
 </html>
