--- a/kitty-test.html
+++ b/kitty-test.html
@@ -616,9 +616,7 @@
 																											<font
 																												face="Lucida Sans, Trebuchet MS, Lucida Sans, Lucida Grande, Arial, sans-serif"
 																												color="#1c1c1c" style="font-weight: normal;">
-																												Sleep on keyboard then cats take over the world bite off human's
-																												toes lick human with sandpaper tongue ooh, are those your S2S0
-																												dollar sandals ? blep for tickle my belly
+																												l will pester for food when you're in the kitchen even if it's salad. Leave dead animals as gifts eat a plant.
 																											</font>
 																										</p>
 																									</div>
@@ -685,10 +683,7 @@
 																											<font
 																												face="Lucida Sans, Trebuchet MS, Lucida Sans, Lucida Grande, Arial, sans-serif"
 																												color="#1c1c1c" style="font-weight: normal;">
-																												Lemme use that as my litter box yet <span class="nowrap">floof
-																													tum,</span> tickle bum, jellybean footies curly toes. Toy
-																												mouse
-																												squeak roll over
+																												Kill a hand yet purr but Gate keepers of hell lie on your belly and purr when you are asleep
 																											</font>
 																										</p>
 																									</div>
@@ -757,9 +752,7 @@
 																											<font
 																												face="Lucida Sans, Trebuchet MS, Lucida Sans, Lucida Grande, Arial, sans-serif"
 																												color="#1c1c1c" style="font-weight: normal;">
-																												Sleep on keyboard then cats take over the world bite off human's
-																												toes lick human with sandpaper tongue ooh, are those your S2S0
-																												dollar sandals ? blep for tickle my belly
+																												Or I show my fluffy belly but it's a trap! If you pet it I will tear up your hand. Sit and stare the fat cat sat on the mat
 																											</font>
 																										</p>
 																									</div>
@@ -826,10 +819,7 @@
 																											<font
 																												face="Lucida Sans, Trebuchet MS, Lucida Sans, Lucida Grande, Arial, sans-serif"
 																												color="#1c1c1c" style="font-weight: normal;">
-																												Lemme use that as my litter box yet <span class="nowrap">floof
-																													tum,</span> tickle bum, jellybean footies curly toes. Toy
-																												mouse
-																												squeak roll over
+																												Bat away with paws. Destroy couch chase imaginary busy, round around the house at 4 in the morning peer out window, chatter at birds, lure them to mouth for munch, much
 																											</font>
 																										</p>
 																									</div>
